--- a/PowerRangers-master/taxi-frontend/src/pages/home/Home.css
+++ b/PowerRangers-master/taxi-frontend/src/pages/home/Home.css
@@ -6,3 +6,75 @@
     rgba(9, 1, 78, 1) 100%
   );
 }
+
+.menu-container {
+  position: relative;
+  display: inline-block;
+}
+
+.menu-icon {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  cursor: pointer;
+  background-color: #333;
+  border-radius: 8px;
+  padding: 8px;
+  position: fixed;
+  top: 10px;
+  right: 20px;
+  z-index: 1001;
+}
+
+.menu-line {
+  width: 24px;
+  height: 3px;
+  background-color: white;
+}
+
+.dropdown {
+  position: fixed;
+  top: 117px;
+  right: 0px;
+  background-color: #333;
+  color: white;
+  border-radius: 8px;
+  padding: 16px;
+  padding-right: 0px;
+  width: 200px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1001;
+}
+
+.dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown li {
+  padding: 12px 0;
+  border-bottom: 1px solid #555;
+  cursor: pointer;
+}
+
+.dropdown li:last-child {
+  border-bottom: none;
+}
+
+.dropdown .close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.dropdown .close-button:focus {
+  outline: none;
+}
